--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 ---
-layout: home
+title: "RESPECT THE GRIND"
+layout: splash
 author_profile: true
+header:
+  overlay_image: /photos/coffeebanner01.jpg
+  show_overlay_excerpt: true
+  cta_label: "About"
+  cta_url: "/about/"
+excerpt: "Dedicated to coffee"
 ---
