--- a/index.html
+++ b/index.html
@@ -8,4 +8,16 @@ header:
   cta_label: "About"
   cta_url: "/about/"
 excerpt: "Dedicated to coffee"
+intro:  
+- excerpt: "Respect the Grind is a blog dedicated to providing simple reviews of coffee shops.  We have mad respect for the creativity, community, and craftmanship featured in each individual store. We hope you enjoy our reviews.  Stay caffeinated, friends."
+feature_row:
+  - image_path: /photos/coffeebanner02.jpg
+    title: "Showing our respect to coffee locals.  Check out our reviews here. "
+    btn_label: "Explore"
+    btn_class: "btn--primary"
+    url: "/locations/"
 ---
+
+{% include feature_row id="intro" type="center" %}
+
+{% include feature_row %}
