--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ header:
   cta_url: "/about/"
 excerpt: "Dedicated to coffee"
 intro:  
-- excerpt: "Respect the Grind is a blog dedicated to providing simple reviews of coffee shops.  We have mad respect for the creativity, community, and craftmanship featured in each individual store. We hope you enjoy our reviews.  Stay caffeinated, friends."
+- excerpt: "Respect the Grind is a blog dedicated to providing simple reviews of coffee shops.  We admire the creativity, community, and craftmanship featured in each individual store. We hope you enjoy our reviews.  Stay caffeinated, friends."
 feature_row:
   - image_path: /photos/coffeebanner02.jpg
     title: "Showing our respect to coffee locals.  Check out our reviews here. "
