Adding review for all shops

--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@ header:
   show_overlay_excerpt: true
   cta_label: "About"
   cta_url: "/about/"
-excerpt: "Coffee shop reviews for everyone"
 intro:  
 - excerpt: "Respect the Grind is a blog dedicated to providing simple reviews of coffee shops.  We admire the creativity, community, and craftmanship featured in each individual store. We hope you enjoy our reviews.  Stay caffeinated, friends."
 feature_row:
   - image_path: /photos/coffeebanner02.jpg
-    title: "Showing our respect to coffee locales.  Check out our reviews here. "
+    title: "Check out our reviews here. "
     btn_label: "Explore"
     btn_class: "btn--primary"
     url: "/locations/"
